tests/tests/snapshots/golden__gen__python__scheduled-cleanup.snap
---
source: tests/tests/golden.rs
expression: project_dump(&project)
---
============================================================
Dockerfile
============================================================
FROM python:3.12-slim

WORKDIR /srv

COPY pyproject.toml ./
RUN pip install --no-cache-dir uv && uv pip install --system -r pyproject.toml

COPY app ./app

EXPOSE 8000
CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
============================================================
README.md
============================================================
# Maintenance

Generated by [CIaC](https://github.com/jrcalgo/ciac) — do not edit the
compiler-owned wiring by hand; regenerate it from the `.ciac` source
instead. Business logic lives in `app/services/`, which is yours.

## Run

```sh
uv sync
uv run uvicorn app.main:app --reload
```

Workers and scheduled jobs run separately:

```sh
uv run python -m app.workers
```

Or bring up the full stack (API, workers/jobs, Postgres):

```sh
docker compose up --build
```

## Test & lint

```sh
uv run pytest
uv run ruff check .
```

## Layout

| Path | Purpose | Owner |
|------|---------|-------|
| `app/main.py` | Application assembly | compiler |
| `app/api/` | HTTP routers (one per api) | compiler |
| `app/services/` | Business-logic handlers | **you** |
| `app/workers/` | Queue consumers and scheduled jobs | compiler |
| `app/config.py` | Environment-driven settings | compiler |
============================================================
app/__init__.py
============================================================
"""Maintenance — generated by CIaC. Structure is compiler-owned;
business logic belongs in `app/services/`."""
============================================================
app/config.py
============================================================
"""Runtime configuration for Maintenance. Generated by CIaC.

Every value can be overridden through the environment (or an `.env`
file): field names map to upper-cased variables, e.g. `DATABASE_URL`.
"""

from functools import lru_cache

from pydantic_settings import BaseSettings, SettingsConfigDict


class Settings(BaseSettings):
    """Environment-driven settings with development defaults."""

    model_config = SettingsConfigDict(env_file=".env", extra="ignore")

    database_url: str = "postgresql+asyncpg://postgres:postgres@localhost:5432/maintenance"


@lru_cache
def get_settings() -> Settings:
    return Settings()
============================================================
app/db.py
============================================================
"""Async database access (SQLAlchemy + asyncpg). Generated by CIaC.

Engines are created lazily so importing the app never requires a running
database. Each named `db` instance from the `use { .. }` block gets its
own engine, sessionmaker, and FastAPI dependency.
"""

from collections.abc import AsyncIterator

from sqlalchemy.ext.asyncio import (
    AsyncEngine,
    AsyncSession,
    async_sessionmaker,
    create_async_engine,
)
from sqlalchemy.orm import DeclarativeBase

from app.config import get_settings


class Base(DeclarativeBase):
    """Declarative base for all models."""


def _urls() -> dict[str, str]:
    settings = get_settings()
    return {
        "default": settings.database_url,
    }


_engines: dict[str, AsyncEngine] = {}
_sessionmakers: dict[str, async_sessionmaker[AsyncSession]] = {}


def get_engine(instance: str = "default") -> AsyncEngine:
    if instance not in _engines:
        url = _urls()[instance]
        _engines[instance] = create_async_engine(url)
    return _engines[instance]


def get_sessionmaker(instance: str = "default") -> async_sessionmaker[AsyncSession]:
    if instance not in _sessionmakers:
        _sessionmakers[instance] = async_sessionmaker(
            get_engine(instance), expire_on_commit=False
        )
    return _sessionmakers[instance]


async def get_session() -> AsyncIterator[AsyncSession]:
    """FastAPI dependency yielding one `default` session per request."""
    async with get_sessionmaker("default")() as session:
        yield session


async def create_schema(instance: str = "default") -> None:
    """Creates CRUD-resource tables on startup. `table` declarations
    (v0.7) are provisioned by `run_migrations` instead, since they carry
    real incremental migrations rather than a create-if-absent call.
    """
    return

============================================================
app/main.py
============================================================
"""Application assembly for Maintenance. Generated by CIaC."""

from collections.abc import AsyncIterator
from contextlib import asynccontextmanager

from fastapi import FastAPI



@asynccontextmanager
async def lifespan(_: FastAPI) -> AsyncIterator[None]:
    from app.db import create_schema
    await create_schema()
    yield


app = FastAPI(title="Maintenance", lifespan=lifespan)


@app.get("/health")
async def health() -> dict[str, str]:
    return {"status": "ok"}


============================================================
app/services/__init__.py
============================================================
"""Business-logic handlers. This is where your code goes."""
============================================================
app/services/prune_expired.py
============================================================
"""Handler for the `PruneExpired` pipeline step. Generated by CIaC.

This file is yours: the compiler wires `PruneExpired` into its
pipelines, and you implement the business logic in `handle`.
"""

from typing import Any
from sqlalchemy.ext.asyncio import AsyncSession



class PruneExpired:
    """Business logic for the `PruneExpired` step.

    Capability bindings:
    - db: default
    """

    def __init__(
        self,
        session: AsyncSession | None = None,
    ) -> None:
        self.session = session

    async def handle(self, payload: dict[str, Any]) -> dict[str, Any]:
        # TODO: implement the PruneExpired step.
        return payload
============================================================
app/workers/__init__.py
============================================================
"""Queue-driven workers and scheduled jobs. Run them all with `python -m app.workers`."""
============================================================
app/workers/__main__.py
============================================================
"""Runs every worker in one process: `python -m app.workers`. Generated by CIaC."""

import asyncio

from app.workers import (
    cleanup,
)


async def main() -> None:
    await asyncio.gather(
        cleanup.run(),
    )


if __name__ == "__main__":
    asyncio.run(main())
============================================================
app/workers/cleanup.py
============================================================
"""Scheduled job pipeline for `job Cleanup`. Generated by CIaC."""

import asyncio
from datetime import datetime, timezone
import logging
from typing import Any

from croniter import croniter
from app.db import get_sessionmaker
from app.services.prune_expired import PruneExpired

SCHEDULE = "0 3 * * *"
CATCH_UP = False
logger = logging.getLogger(__name__)


async def handle_tick_once() -> None:
    result: dict[str, Any] = {}
    async with get_sessionmaker()() as session:

        result = await PruneExpired(session=session).handle(result)


async def _sleep_until_next() -> None:
    now = datetime.now(timezone.utc)
    next_fire = croniter(SCHEDULE, now).get_next(datetime)
    if next_fire.tzinfo is None:
        next_fire = next_fire.replace(tzinfo=timezone.utc)
    await asyncio.sleep(max(0.0, (next_fire - now).total_seconds()))


async def run() -> None:
    """Runs this scheduled job forever."""
    while True:
        await _sleep_until_next()
        try:
            await handle_tick_once()
        except Exception:
            logger.exception("scheduled job Cleanup failed")
============================================================
conftest.py
============================================================
"""Pytest configuration. Generated by CIaC."""

import pytest


@pytest.fixture
def anyio_backend() -> str:
    return "asyncio"
============================================================
docker-compose.yml
============================================================
services:
  app:
    build: .
    ports:
      - "8000:8000"
    healthcheck:
      test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:8000/health', timeout=2)"]
      interval: 1s
      timeout: 3s
      retries: 30
    environment:
      DATABASE_URL: postgresql+asyncpg://postgres:postgres@db:5432/maintenance
    depends_on:
      db:
        condition: service_healthy

  workers:
    build: .
    command: ["python", "-m", "app.workers"]
    environment:
      DATABASE_URL: postgresql+asyncpg://postgres:postgres@db:5432/maintenance
    depends_on:
      db:
        condition: service_healthy

  db:
    image: postgres:16
    ports:
      - "5432:5432"
    environment:
      POSTGRES_PASSWORD: postgres
      POSTGRES_DB: maintenance
    volumes:
      - db-data:/var/lib/postgresql/data
    healthcheck:
      test: ["CMD-SHELL", "pg_isready -U postgres"]
      interval: 2s
      timeout: 3s
      retries: 20

volumes:
  db-data:
============================================================
pyproject.toml
============================================================
[project]
name = "maintenance"
version = "0.1.0"
description = "Generated by CIaC from `service Maintenance`"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "croniter>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "anyio>=4.4",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
# tests/system/ needs the compose stack up and is run only by
# `ciac verify --system` (from its own directory); plain `pytest`
# must never collect it.
norecursedirs = ["tests/system"]

[tool.ruff]
target-version = "py311"
============================================================
tests/test_smoke.py
============================================================
"""Smoke tests generated by CIaC.

These run without any infrastructure: clients are lazy and the ASGI
transport below does not trigger the startup lifespan.
"""

import httpx
import pytest

from app.main import app


def _client() -> httpx.AsyncClient:
    transport = httpx.ASGITransport(app=app)
    return httpx.AsyncClient(transport=transport, base_url="http://test")


def test_routes_registered() -> None:
    paths = set(app.openapi()["paths"])
    assert "/health" in paths


@pytest.mark.anyio
async def test_health() -> None:
    async with _client() as client:
        response = await client.get("/health")
    assert response.status_code == 200
    assert response.json() == {"status": "ok"}


def test_job_schedules_are_valid_cron() -> None:
    from croniter import croniter
    from app.workers.cleanup import SCHEDULE as CLEANUP_SCHEDULE

    assert croniter.is_valid(CLEANUP_SCHEDULE)
