tests/tests/snapshots/golden__gen__python__sqlite-notes.snap
---
source: tests/tests/golden.rs
expression: project_dump(&project)
---
============================================================
Dockerfile
============================================================
FROM python:3.12-slim

WORKDIR /srv

COPY pyproject.toml ./
RUN pip install --no-cache-dir uv && uv pip install --system -r pyproject.toml

COPY app ./app

EXPOSE 8000
CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
============================================================
README.md
============================================================
# SqliteNotes

Generated by [CIaC](https://github.com/jrcalgo/ciac) — do not edit the
compiler-owned wiring by hand; regenerate it from the `.ciac` source
instead. Business logic lives in `app/services/`, which is yours.

## Run

```sh
uv sync
uv run uvicorn app.main:app --reload
```

Or bring up the full stack (API, Postgres):

```sh
docker compose up --build
```

## Test & lint

```sh
uv run pytest
uv run ruff check .
```

## Layout

| Path | Purpose | Owner |
|------|---------|-------|
| `app/main.py` | Application assembly | compiler |
| `app/api/` | HTTP routers (one per api) | compiler |
| `app/services/` | Business-logic handlers | **you** |
| `app/workers/` | Queue consumers and scheduled jobs | compiler |
| `app/config.py` | Environment-driven settings | compiler |
============================================================
app/__init__.py
============================================================
"""SqliteNotes — generated by CIaC. Structure is compiler-owned;
business logic belongs in `app/services/`."""
============================================================
app/api/__init__.py
============================================================
"""HTTP routers."""
============================================================
app/api/note.py
============================================================
"""REST endpoints for the `Note` resource. Generated by CIaC."""

from fastapi import APIRouter, Depends, HTTPException, Query, status
from sqlalchemy.ext.asyncio import AsyncSession

from app.db import get_session
from app.models import NoteIn, NoteOut
from app.services.note_store import NoteStore

router = APIRouter(
    prefix="/notes",
    tags=["notes"],
)


def _store(
    session: AsyncSession = Depends(get_session),
) -> NoteStore:
    return NoteStore(
        session
    )


def _out(entity: object) -> NoteOut:
    return NoteOut.model_validate(entity, from_attributes=True)


@router.post("", status_code=status.HTTP_201_CREATED)
async def create_note(
    payload: NoteIn,
    store: NoteStore = Depends(_store),
) -> NoteOut:
    entity = await store.create(payload)
    return _out(entity)


@router.get("")
async def list_notes(
    limit: int = Query(100, ge=1),
    offset: int = Query(0, ge=0),
    store: NoteStore = Depends(_store),
) -> list[NoteOut]:
    entities = await store.list(limit=limit, offset=offset)
    return [_out(entity) for entity in entities]


@router.get("/{entity_id}")
async def get_note(
    entity_id: str,
    store: NoteStore = Depends(_store),
) -> NoteOut:
    entity = await store.get(entity_id)
    if entity is None:
        raise HTTPException(status_code=status.HTTP_404_NOT_FOUND)
    return _out(entity)


@router.put("/{entity_id}")
async def update_note(
    entity_id: str,
    payload: NoteIn,
    store: NoteStore = Depends(_store),
) -> NoteOut:
    entity = await store.update(entity_id, payload)
    if entity is None:
        raise HTTPException(status_code=status.HTTP_404_NOT_FOUND)
    return _out(entity)


@router.delete("/{entity_id}", status_code=status.HTTP_204_NO_CONTENT)
async def delete_note(
    entity_id: str,
    store: NoteStore = Depends(_store),
) -> None:
    deleted = await store.delete(entity_id)
    if not deleted:
        raise HTTPException(status_code=status.HTTP_404_NOT_FOUND)
============================================================
app/config.py
============================================================
"""Runtime configuration for SqliteNotes. Generated by CIaC.

Every value can be overridden through the environment (or an `.env`
file): field names map to upper-cased variables, e.g. `DATABASE_URL`.
"""

from functools import lru_cache

from pydantic_settings import BaseSettings, SettingsConfigDict


class Settings(BaseSettings):
    """Environment-driven settings with development defaults."""

    model_config = SettingsConfigDict(env_file=".env", extra="ignore")

    database_url: str = "sqlite+aiosqlite:///data/sqlite_notes.db"


@lru_cache
def get_settings() -> Settings:
    return Settings()
============================================================
app/db.py
============================================================
"""Async database access (SQLAlchemy + asyncpg). Generated by CIaC.

Engines are created lazily so importing the app never requires a running
database. Each named `db` instance from the `use { .. }` block gets its
own engine, sessionmaker, and FastAPI dependency.
"""

from collections.abc import AsyncIterator

from sqlalchemy.ext.asyncio import (
    AsyncEngine,
    AsyncSession,
    async_sessionmaker,
    create_async_engine,
)
from sqlalchemy.orm import DeclarativeBase

from app.config import get_settings


class Base(DeclarativeBase):
    """Declarative base for all models."""


def _urls() -> dict[str, str]:
    settings = get_settings()
    return {
        "default": settings.database_url,
    }


_engines: dict[str, AsyncEngine] = {}
_sessionmakers: dict[str, async_sessionmaker[AsyncSession]] = {}


def get_engine(instance: str = "default") -> AsyncEngine:
    if instance not in _engines:
        url = _urls()[instance]
        if url.startswith("sqlite"):
            # The database is a local file; aiosqlite creates the file
            # but not its directory.
            import pathlib

            pathlib.Path("data").mkdir(exist_ok=True)
        _engines[instance] = create_async_engine(url)
    return _engines[instance]


def get_sessionmaker(instance: str = "default") -> async_sessionmaker[AsyncSession]:
    if instance not in _sessionmakers:
        _sessionmakers[instance] = async_sessionmaker(
            get_engine(instance), expire_on_commit=False
        )
    return _sessionmakers[instance]


async def get_session() -> AsyncIterator[AsyncSession]:
    """FastAPI dependency yielding one `default` session per request."""
    async with get_sessionmaker("default")() as session:
        yield session


async def create_schema(instance: str = "default") -> None:
    """Creates CRUD-resource tables on startup. `table` declarations
    (v0.7) are provisioned by `run_migrations` instead, since they carry
    real incremental migrations rather than a create-if-absent call.
    """
    from app import models  # noqa: F401  (registers models on Base)

    names = ["notes"]
    async with get_engine(instance).begin() as conn:
        await conn.run_sync(
            lambda sync_conn: Base.metadata.create_all(
                sync_conn, tables=[Base.metadata.tables[name] for name in names]
            )
        )

============================================================
app/main.py
============================================================
"""Application assembly for SqliteNotes. Generated by CIaC."""

from collections.abc import AsyncIterator
from contextlib import asynccontextmanager

from fastapi import FastAPI

from app.api.note import router as note_router


@asynccontextmanager
async def lifespan(_: FastAPI) -> AsyncIterator[None]:
    from app.db import create_schema
    await create_schema()
    yield


app = FastAPI(title="SqliteNotes", lifespan=lifespan)


@app.get("/health")
async def health() -> dict[str, str]:
    return {"status": "ok"}


app.include_router(note_router)
============================================================
app/models.py
============================================================
"""Persistence models and API schemas for CRUD resources and `table`
declarations. Generated by CIaC.

Typed resources (`crud X: Record;`) get real columns from their record;
untyped ones keep a generic keyed-document model (UUID key + JSON
payload). `table <Name>: <Record>;` declarations (v0.7) get the same
column treatment, named after the table so a record reused under several
table names doesn't collide. Enums are stored as text.
"""



from pydantic import BaseModel
from sqlalchemy import String, Text
from sqlalchemy.orm import Mapped, mapped_column

from app.db import Base



class Note(Base):
    __tablename__ = "notes"

    id: Mapped[str] = mapped_column(String(36), primary_key=True)
    title: Mapped[str] = mapped_column(Text)


class NoteIn(BaseModel):
    """Payload for creating or updating a Note; the `id`
    is server-generated."""

    title: str


class NoteOut(BaseModel):
    id: str
    title: str

============================================================
app/schemas.py
============================================================
"""Data schemas from the program's `record` declarations. Generated by CIaC."""


from pydantic import BaseModel



class Note(BaseModel):
    id: str
    title: str

============================================================
app/services/__init__.py
============================================================
"""Business-logic handlers. This is where your code goes."""
============================================================
app/services/note_store.py
============================================================
"""Persistence for the `Note` resource. Generated by CIaC."""

import uuid

from sqlalchemy import select
from sqlalchemy.ext.asyncio import AsyncSession

from app.models import Note, NoteIn


class NoteStore:
    """CRUD operations for Note."""

    def __init__(
        self,
        session: AsyncSession,
    ) -> None:
        self.session = session

    async def create(self, payload: NoteIn) -> Note:
        entity = Note(id=str(uuid.uuid4()), **payload.model_dump(mode="json"))
        self.session.add(entity)
        await self.session.commit()
        return entity

    async def get(self, entity_id: str) -> Note | None:
        return await self.session.get(Note, entity_id)

    async def list(self, limit: int = 100, offset: int = 0) -> list[Note]:
        result = await self.session.scalars(select(Note).limit(limit).offset(offset))
        return list(result)

    async def update(self, entity_id: str, payload: NoteIn) -> Note | None:
        entity = await self.session.get(Note, entity_id)
        if entity is None:
            return None
        for field, value in payload.model_dump(mode="json").items():
            setattr(entity, field, value)
        await self.session.commit()
        return entity

    async def delete(self, entity_id: str) -> bool:
        entity = await self.session.get(Note, entity_id)
        if entity is None:
            return False
        await self.session.delete(entity)
        await self.session.commit()
        return True
============================================================
conftest.py
============================================================
"""Pytest configuration. Generated by CIaC."""

import pytest


@pytest.fixture
def anyio_backend() -> str:
    return "asyncio"
============================================================
docker-compose.yml
============================================================
services:
  app:
    build: .
    ports:
      - "8000:8000"
    healthcheck:
      test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:8000/health', timeout=2)"]
      interval: 1s
      timeout: 3s
      retries: 30
    environment:
      DATABASE_URL: sqlite+aiosqlite:///data/sqlite_notes.db
    depends_on:
    volumes:
      - app-data:/app/data

volumes:
  app-data:
============================================================
pyproject.toml
============================================================
[project]
name = "sqlite-notes"
version = "0.1.0"
description = "Generated by CIaC from `service SqliteNotes`"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "anyio>=4.4",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
# tests/system/ needs the compose stack up and is run only by
# `ciac verify --system` (from its own directory); plain `pytest`
# must never collect it.
norecursedirs = ["tests/system"]

[tool.ruff]
target-version = "py311"
============================================================
tests/test_smoke.py
============================================================
"""Smoke tests generated by CIaC.

These run without any infrastructure: clients are lazy and the ASGI
transport below does not trigger the startup lifespan.
"""

import httpx
import pytest

from app.main import app


def _client() -> httpx.AsyncClient:
    transport = httpx.ASGITransport(app=app)
    return httpx.AsyncClient(transport=transport, base_url="http://test")


def test_routes_registered() -> None:
    paths = set(app.openapi()["paths"])
    assert "/notes" in paths
    assert "/health" in paths


@pytest.mark.anyio
async def test_health() -> None:
    async with _client() as client:
        response = await client.get("/health")
    assert response.status_code == 200
    assert response.json() == {"status": "ok"}
